--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,14 +1,18 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-// Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
-$kaldi-red-invert: #fff
+// gicma logo brand color:
+$gicma-green: #16b297
+$gicma-green-invert: #fff
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
+$primary: $gicma-green
+$primary-invert: $gicma-green-invert
+$secondary: #666c9d
 $body-color: #333
 $black: #2b2523
+
+.has-background-secondary
+  background-color: $secondary !important
 
 .navbar .navbar-menu
   box-shadow:none !important
@@ -88,9 +92,9 @@ footer.footer
 $menu-item-color: $white-ter
 $menu-item-hover-color: $black !important
 $menu-item-hover-background-color: $black
-$menu-item-active-color: $kaldi-red-invert
-$menu-item-active-background-color:	$kaldi-red-invert
-$menu-list-border-left: 1px solid $kaldi-red-invert
+$menu-item-active-color: $gicma-green-invert
+$menu-item-active-background-color:	$gicma-green-invert
+$menu-list-border-left: 1px solid $gicma-green-invert
 $menu-label-color: $white-ter
 
 
